--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.FarmerLoginActivity">
-
+    tools:context=".Activities.OtpVerificationActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -17,52 +16,49 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_aadhaar_logo" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="104dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Enter your aadhar UID with registered local phone number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_aadhar_number"
+        android:id="@+id/til_otp"
         style="@style/LoginTextInputLayoutStyle"
         android:layout_width="345dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Enter aadhar UID"
         android:layout_marginLeft="34dp"
+        android:layout_marginTop="40dp"
+        android:hint="Enter OTP"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:fontFamily="@font/montserrat"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_send_otp"
+        android:id="@+id/btn_continue"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="send otp"
+        android:text="continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_aadhar_number"
+        app:layout_constraintTop_toBottomOf="@+id/til_otp"
         android:background="@drawable/button_background"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat"/>
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Resend OTP"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/til_otp"
+        app:layout_constraintLeft_toLeftOf="@+id/til_otp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
