--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,4 +58,19 @@
         <item name="boxStrokeWidth">2dp</item>
     </style>
 
+    <style name="TitleAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:color">#fff</item>
+        <item name="android:layout_marginStart">50dp</item>
+    </style>
+    <style name="SubtitleAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:color">#fff</item>
+        <item name="android:layout_marginStart">50dp</item>
+    </style>
+
 </resources>
