--- a/app/src/main/res/layout/fragment_special_offers.xml
+++ b/app/src/main/res/layout/fragment_special_offers.xml
@@ -17,6 +17,8 @@
                 android:layout_marginTop="10dp"
                 android:id="@+id/view_pager_offers"
                 android:layout_width="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_height="224dp" />
 
             <me.relex.circleindicator.CircleIndicator
