--- a/app/src/main/res/layout/list_item_products.xml
+++ b/app/src/main/res/layout/list_item_products.xml
@@ -6,61 +6,89 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp"
-    android:elevation="5dp"
+    app:cardElevation="4dp"
+    android:focusable="true"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_margin="8dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="12dp"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/iv_product"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_cauliflower_image"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cauliflower"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:textColor="@color/material_dark"
-                android:fontFamily="@font/montserrat"/>
-            <TextView
-                android:id="@+id/tv_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="40/kg"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-        </LinearLayout>
         <ImageView
-            android:id="@+id/iv_favourite"
-            android:src="@drawable/ic_favourite"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"/>
+            android:id="@+id/iv_product"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_cauliflower_image" />
 
-    </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp">
+
+
+            <TextView
+                android:id="@+id/product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Product Name"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/product_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Address"
+                android:fontFamily="@font/montserrat"
+                android:layout_below="@+id/product_name"
+                android:textColor="@color/grey"/>
+
+
+            <TextView
+                android:id="@+id/product_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="40/Kg"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginTop="8dp"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="8dp"
+                android:layout_below="@+id/product_address"
+                android:textColor="@color/black"/>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/like_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="0dp"
+                android:layout_margin="8dp"
+                android:focusable="true"
+                android:clickable="true"
+                app:cardBackgroundColor="@color/white"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_alignParentEnd="true">
+
+                <ImageView
+                    android:id="@+id/favourite_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/favourite_outline_24dp"
+                    android:layout_gravity="center"/>
+
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
