--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_green">#92DD92</color>
+    <color name="light_white">#99FFFFFF</color>
     <color name="facebook_blue">#3B5998</color>
     <color name="grey">#9E9E9E</color>
     <color name="material_dark">#424242</color>
