--- a/app/src/main/res/layout/activity_farmer_login.xml
+++ b/app/src/main/res/layout/activity_farmer_login.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activities.FarmerLoginActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -60,6 +62,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="104dp"
         android:fontFamily="@font/montserrat"
+        android:textColor="@color/grey"
         android:text="Enter your aadhar UID with registered local phone number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -73,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Enter aadhar UID"
+        android:textColorHint="@color/grey"
         android:layout_marginLeft="34dp"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +87,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:fontFamily="@font/montserrat"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textStyle="bold"
+            android:includeFontPadding="true"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
