--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activities.OtpVerificationActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -61,6 +63,7 @@
         android:layout_marginLeft="34dp"
         android:layout_marginTop="40dp"
         android:hint="Enter OTP"
+        android:textColorHint="@color/grey"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,7 +73,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat" />
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:inputType="number"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -94,6 +101,7 @@
         android:text="Resend OTP"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/black"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/til_otp"
         app:layout_constraintLeft_toLeftOf="@+id/til_otp"
         />
